--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -8,8 +8,10 @@
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
-  --button-color: #b69d5f;
-  --theme-color: #95855E;
+  --button-color: #233c76;
+  /* --theme-color: #95855E;  */
+  --theme-color: #162e66; 
+  /* #162e66 */
   --dark-mode-bg: #131f40;
   --dark-mode-component: #1d2a4c;
   --dark-mode-bg-lighter: #263154;
@@ -32,20 +34,8 @@ body {
     color 0.5s,
     background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  font-size: 15px;
+  font-family: "Montserrat", sans-serif, Inter;
+  /* font-size: 15px; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
