--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -35,7 +35,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family: "Montserrat", sans-serif, Inter;
-  /* font-size: 15px; */
+  font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
