--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
@@ -38,7 +41,7 @@ body {
     color 0.5s,
     background-color 0.5s;
   line-height: 1.75;
-  font-family: "Montserrat", sans-serif, Inter;
+  font-family: "Bricolage Grotesque", "Montserrat", sans-serif, Inter;
   /* font-size: 15px; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
