--- a/src/assets/styles/pluginsCustomized/easy-data-table.css
+++ b/src/assets/styles/pluginsCustomized/easy-data-table.css
@@ -69,7 +69,7 @@
 
 
 .vue3-easy-data-table__loading-mask {
-  background-color: #111 !important;
+  /* background-color: #111 !important; */
   opacity: .1 !important;
 }
 
