--- a/src/assets/styles/pluginsCustomized/v-select.css
+++ b/src/assets/styles/pluginsCustomized/v-select.css
@@ -1,19 +1,19 @@
-/* :root {
-  --vs-controls-color: var(--vt-c-white);
-  --vs-border-color: var(--bs-border-color);
+:root {
+  /* --vs-controls-color: var(--vt-c-white); */
+  /* --vs-border-color: var(--bs-border-color); */
 
-  --vs-dropdown-bg: var(--dynamic-bg-component);
-  --vs-dropdown-color: var(--dynamic-color);
-  --vs-dropdown-option-color:var(--dynamic-color);
+  /* --vs-dropdown-bg: var(--theme-color); */
+  /* --vs-dropdown-color: var(--dynamic-color); */
+  /* --vs-dropdown-option-color:var(--dynamic-color); */
 
-  --vs-selected-bg: var(--theme-color);
-  --vs-selected-color: var(--vt-c-white);
+  /* --vs-selected-bg: var(--theme-color); */
+  /* --vs-selected-color: var(--vt-c-white); */
 
-  --vs-search-input-color: var(--dynamic-color);
+  /* --vs-search-input-color: var(--dynamic-color); */
 
+  /* --vs-dropdown-option--active-color: #eeeeee; */
   --vs-dropdown-option--active-bg: var(--theme-color);
-  --vs-dropdown-option--active-color: #eeeeee;
-} */
+}
 
 
 .vs__search {
