--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -42,7 +42,7 @@ body {
     background-color 0.5s;
   line-height: 1.75;
   font-family: "Bricolage Grotesque", "Montserrat", sans-serif, Inter;
-  /* font-size: 15px; */
+  font-size: 16px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
